--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,20 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.13.0",
+        "@types/cors": "^2.8.19",
+        "@types/multer": "^2.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-validator": "^7.2.1",
+        "multer": "^2.0.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0"
     },
     "devDependencies": {
+        "@cucumber/cucumber": "^11.3.0",
         "@types/express": "^4.17.9",
+        "@types/express-validator": "^2.20.33",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.10",
         "@types/supertest": "^6.0.2",
